# Charm-Garfield

./: 3He_CF4_8bar.gas  CHARM.C  CMakeLists.txt  README.md  ar-80_co2-20_1000mbar.gas  he3_cf4.gas
